maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:18: error: value <=- is not a member of Int
    else if (virages<=-4) {choix1()}
                    ^